<resources>
    <string name="app_name">Calculator</string>
    <string name="formula_text" />
    <string name="bc">AC</string>
    <string name="bsign">+/-</string>
    <string name="bper">%</string>
    <string name="bdiv">÷</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="btimes">×</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="bminus">－</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="bplus">＋</string>
    <string name="b0">0</string>
    <string name="bdot">.</string>
    <string name="bequal">＝</string>
</resources>
